syntax = "proto3";
package hello;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

service HelloService {
    rpc HelloWorld (google.protobuf.Empty) returns (HelloWorldResponse) {
        option (google.api.http) = {
            get: "/v1/hello/world"
        };
    }
    rpc Hello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            get: "/v1/hello/{name}"
        };
    }
}

message HelloWorldResponse {
    string message = 1;
}

message HelloRequest {
    string name = 1;
    google.protobuf.Any any = 2;
}

message HelloReply {
    string message = 1;
}
